<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/general_layout"
    tools:context="com.yalantis.desser.ce_1257218.MainActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <FrameLayout style="@style/frame_layout">


                <TextView

                    android:id="@+id/main_text_heading"
                    style="@style/area"
                    android:onClick="onClick"
                    android:text="@string/main_text_heading" />

                <TextView
                    android:id="@+id/main_text_status"
                    style="@style/status"

                    android:onClick="onClick"
                    android:text="@string/main_text_status" />
            </FrameLayout>

            <View style="@style/divider" />


            <FrameLayout style="@style/frame_layout">

                <TextView
                    android:id="@+id/main_text_created"
                    style="@style/main_text"

                    android:onClick="onClick"
                    android:text="@string/main_text_created" />

                <TextView
                    android:id="@+id/main_text_date_created"
                    style="@style/dates"
                    android:onClick="onClick"
                    android:text="@string/main_text_date_created" />
            </FrameLayout>

            <View style="@style/divider" />

            <FrameLayout style="@style/frame_layout">

                <TextView
                    android:id="@+id/main_text_register"
                    style="@style/main_text"

                    android:onClick="onClick"
                    android:text="@string/main_text_register" />

                <TextView
                    android:id="@+id/main_text_date_register"
                    style="@style/dates"

                    android:onClick="onClick"
                    android:text="@string/main_text_date_register" />
            </FrameLayout>

            <View style="@style/divider" />

            <FrameLayout style="@style/frame_layout">

                <TextView
                    android:id="@+id/main_text_solve"
                    style="@style/main_text"

                    android:onClick="onClick"
                    android:text="@string/main_text_solve" />

                <TextView
                    android:id="@+id/main_text_date_solve"
                    style="@style/dates"

                    android:onClick="onClick"
                    android:text="@string/main_text_date_solve" />

            </FrameLayout>

            <View style="@style/divider" />

            <FrameLayout style="@style/frame_layout">

                <TextView
                    android:id="@+id/main_text_responsible"
                    style="@style/main_text"

                    android:onClick="onClick"
                    android:text="@string/main_text_responsible" />

                <TextView
                    android:id="@+id/main_text_responsible_item"
                    style="@style/dates"

                    android:onClick="onClick"
                    android:text="@string/main_text_responsible_item" />
            </FrameLayout>

            <View style="@style/divider" />

            <TextView
                android:id="@+id/main_text_description"
                style="@style/description"

                android:onClick="onClick"
                android:text="@string/main_text_description" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/recycler_image_view"
                style="@style/recycle_view"
                android:onClick="onClick" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>

    <!-- [Comment] Wrong different screen support. You should make one layout and different dimens files -->